--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="header_wrap" class="outer">
         <header class="inner">
 
-          <h1 id="project_title">Tree automaton</h1>
+          <h1 id="project_title">Tree Automaton</h1>
           <h2 id="project_tagline"></h2>
 
             <!--<section id="downloads">
@@ -33,11 +33,11 @@
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Apa itu tree automaton?</h3>
 
-<p>Tree automaton adalah sebuah state machine yang bekerja dengan struktur pohon. Tree automata dibagi menjadi 2 bagian berdasarkan persepsinya, yaitu branching tree automata dan tree walking automata. 
-   Branching tree automata memproses bahasa pohon regular, yaitu sebuah bahasa regular yang mendeskripsikan sekumpulan term yang disusun menjadi sebuah pohon. Sedangkan pada tree walking automata pohon diproses secara sekuensial.
+<p>Tree automaton adalah sebuah state machine yang bekerja dengan struktur pohon. Tree automata dibagi menjadi 2 berdasarkan persepsinya, yaitu branching tree automata dan tree walking automata. 
+   Branching tree automata memproses bahasa pohon regular, yaitu sebuah bahasa regular yang mendeskripsikan sekumpulan term yang disusun menjadi sebuah pohon. Sedangkan pada tree walking automata pohon diproses secara sekuensial mulai dari node akar, cabang kiri pohon, kemudian cabang kanan pohon.
    Dalam artikel ini akan dibahas mengenai branching tree automata, karena tree walking automata lebih sulit untuk dianalisis, bahkan untuk pohon yang relatif sederhana.</p>
 
-<p>Branching tree automata</p>
+<p>Branching tree automata dibagi menjadi 2 berdasarkan bagaimana cara pemrosesan sebuah finite tree automata (FTA), yaitu bottom-up dan top-down.</p>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
