--- a/index.html
+++ b/index.html
@@ -41,17 +41,15 @@
 <p>Branching tree automata dibagi menjadi 2 berdasarkan bagaimana cara pemrosesan sebuah finite tree automata (FTA), yaitu bottom-up dan top-down. Kedua cara pemrosesan ini berpengaruh terhadap kekuatan pemrosesan, yaitu pada FTA yang deterministik, DFTA top-down lebih lemah daripada DFTA bottom-up, karena proses top-down hanya dapat bergantung pada path.
    Sebuah branching tree automata didefinisikan dengan tuple (<i>Q,F,Q<sub>f</sub>,Δ</i>).
    Pada FTA bottom-up, <i>Q</i> melambangkan set dari huruf-huruf uner yang dinyatakan sebagai state, <i>F</i> melambangkan huruf berpredikat, <i>Q<sub>f</sub></i> menyatakan set dari final state dimana <i>Q<sub>f</sub></i> subset dari <i>Q</i>, dan <i>Δ</i> menyatakan berbagai aturan transisi state dalam bentuk <i>f(q<sub>1</sub>(x<sub>1</sub>),...,q<sub>n</sub>(x<sub>n</sub>)) → q(f(x<sub>1</sub>,...,x<sub>n</sub>))</i>.
-   Pada FTA top-down, sama dengan FTA bottom-up namun terdapat perbedaan pada <i>Qf</i> dan <i>Δ</i>. <i>Q<sub>f</sub></i> dalam FTA top-down digantikan oleh <i>Q<sub>i</sub></i>, yang menyatakan set dari initial state dimana <i>Q<sub>i</sub></i> subset dari <i>Q</i>, dan <i>Δ</i> memiliki bentuk yang terbalik dengan FTA bottom-up, yaitu <i>q(f(x<sub>1</sub>,...,x<sub>n</sub>)) → f(q<sub>1</sub>(x<sub>1</sub>),...,q<sub>n</sub>(x<sub>n</sub>))</i>.</p>
+   Pada FTA top-down, sama dengan FTA bottom-up namun terdapat perbedaan pada <i>Q<sub>f</sub></i> dan <i>Δ</i>. <i>Q<sub>f</sub></i> dalam FTA top-down digantikan oleh <i>Q<sub>i</sub></i>, yang menyatakan set dari initial state dimana <i>Q<sub>i</sub></i> subset dari <i>Q</i>, dan <i>Δ</i> memiliki bentuk yang terbalik dengan FTA bottom-up, yaitu <i>q(f(x<sub>1</sub>,...,x<sub>n</sub>)) → f(q<sub>1</sub>(x<sub>1</sub>),...,q<sub>n</sub>(x<sub>n</sub>))</i>.</p>
+
+<p>Berikut adalah sebuah contoh FTA bottom-up. Diberikan sebuah FTA bottom-up (<i>Q,F,Q<sub>f</sub>,Δ</i>), dimana <i>F</i> = {0,1,A,B(.,.)}, B memiliki arity 2, <i>Q</i> = {N,C}, <i>Q<sub>f</sub></i> = {C}, dan <i>Δ</i> berisi sekumpulan aturan berikut. </p>
 
 <pre><code>
 0             -> N(0)
 1             -> N(1)
 A             -> C(A)
 B(N(x),C(y))  -> C(B(x,y)) 
-
-$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
 </code></pre>
 
 <p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
