--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header class="inner">
 
           <h1 id="project_title">Tree Automaton</h1>
-          <h2 id="project_tagline"></h2>
+          <h2 id="project_tagline">test</h2>
 
             <!--<section id="downloads">
               <a class="zip_download_link" href="https://github.com/aseham/tree_automaton/zipball/master">Download this project as a .zip file</a>
@@ -65,7 +65,7 @@ C(B(0,B(1,A)))                   (4), diterima
 <pre><code>B(A,B(0,A))
 B(A,B(N(0),C(A)))                (1) dan (3)
 B(A,C(B(0,A)))                   (4)
-B(C(A),C(B(0,A)))                (3), ditolak karena tidak ada aturan B(C(x),C(y)) dalam <i>Δ</i>.
+B(C(A),C(B(0,A)))                (3), ditolak karena tidak ada aturan B(C(x),C(y)) dalam Δ.
 </code></pre>
 
 <h3>
