--- a/index.html
+++ b/index.html
@@ -70,13 +70,11 @@ B(A,C(B(0,A)))                   (4)
 B(C(A),C(B(0,A)))                (3), ditolak karena tidak ada term dalam Δ yang memenuhi.
 </code></pre>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<p>Pada FTA bottom-up, sebuah term ground t diterima jika terdapat reduksi t menjadi q(t), dimana q adalah final state. Sedangkan pada FTA top-down t diterima jika terdapat reduksi q(t) menjadi t, dimana q adalah initial state.
+   Sebuah bahasa pohon L(A) dikenali oleh automata pohon A apabila mengandung semua ground term yang diterima oleh A.
+  </p>
 
 <p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
 
 <p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
 
@@ -95,7 +93,7 @@ B(C(A),C(B(0,A)))                (3), ditolak karena tidak ada term dalam Δ yan
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Tree automaton maintained by <a href="https://github.com/aseham">aseham</a></p>
+        <p class="copyright">Created by <a href="https://github.com/aseham">aseham</a></p>
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
