--- a/index.html
+++ b/index.html
@@ -71,22 +71,9 @@ B(C(A),C(B(0,A)))                (3), ditolak karena tidak ada term dalam Δ yan
 </code></pre>
 
 <p>Pada FTA bottom-up, sebuah term ground t diterima jika terdapat reduksi t menjadi q(t), dimana q adalah final state. Sedangkan pada FTA top-down t diterima jika terdapat reduksi q(t) menjadi t, dimana q adalah initial state.
-   Sebuah bahasa pohon L(A) dikenali oleh automata pohon A apabila mengandung semua ground term yang diterima oleh A.
+   Sebuah bahasa pohon L(A) dikenali oleh automata pohon A apabila mengandung semua term ground yang diterima oleh A. Sebuah set term ground dapat dikenali jika terdapat automata pohon yang mengenalinya.
+   
   </p>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
       </section>
     </div>
 
