--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ B(C(A),C(B(0,A)))                (3), ditolak karena tidak ada term dalam Δ yan
 
 <p>Pada FTA bottom-up, sebuah term ground t diterima jika terdapat reduksi t menjadi q(t), dimana q adalah final state. Sedangkan pada FTA top-down t diterima jika terdapat reduksi q(t) menjadi t, dimana q adalah initial state.
    Sebuah bahasa pohon L(A) dikenali oleh automata pohon A apabila mengandung semua term ground yang diterima oleh A. Sebuah set term ground dapat dikenali jika terdapat automata pohon yang mengenalinya.
-   
+   Sebuah non-deterministik FTA dikatakan lengkap apabila terdapat setidaknya satu term transisi yang dapat mencapai setiap kemungkinan state. State q dapat dicapai apabila terdapat t dimana t dapat direduksi menjadi q(t).
   </p>
       </section>
     </div>
