--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@ B(C(A),C(B(0,A)))                (3), ditolak karena tidak ada term dalam Δ yan
 
 <p>Kongruensi dalam automata pohon adalah sebuah relasi ekuivalen dimana u<sub>1</sub> ≡ v<sub>1</sub> sampai u<sub>n</sub> ≡ v<sub>n</sub> menyatakan f(u<sub>1</sub>,...,u<sub>n</sub>) ≡ f(v<sub>1</sub>,...,v<sub>n</sub>), dimana n adalah indeks terbatas.
    Jika u ≡ v, maka C[u] ≡ C[v], dimana C menyatakan konteks C subset C(F).
-   Untuk sebuah bahasa pohon L, kongruensi dinyatakan dengan u ≡ <sub>L</sub> v, dengan C[u] subset L jika dan hanya jika C[v] subset L untuk tiap konteks C.
-   Teorema Myhill-Nerode didapatkan berdasarkan aturan dalam automata pohon yang berguna untuk meminimalisasikan automata.
+   Untuk sebuah bahasa pohon L, kongruensi dinyatakan dengan u ≡ <sub>L</sub> v, dengan C[u] subset L jika dan hanya jika C[v] subset L untuk tiap konteks C.</p>
+<p>Teorema Myhill-Nerode didapatkan berdasarkan aturan kongruensi dalam automata pohon yang berguna untuk meminimalisasikan automata.
    Teorema Myhill-Nerode menyatakan ketiga pernyataan berikut ekuivalen, yaitu: <br>
    1. L adalah bahasa pohon yang dapat dikenali. <br>
-   2. L adalah gabungan dari beberapa kelas ekuivalen dari kongruensi dari indeks terbatas.
-   3. Hubungan ≡ <sub>L</sub> adalah kongruensi dari indeks terbatas.
+   2. L adalah gabungan dari beberapa kelas ekuivalen dari kongruensi dari indeks terbatas. <br>
+   3. Hubungan ≡ <sub>L</sub> adalah kongruensi dari indeks terbatas. <br>
 </p>
 
 <p>Untuk pembahasan lebih lengkap, dapat dilihat <a href="https://gforge.inria.fr/frs/download.php/10994/tata.pdf">disini</a>.
